--- a/cs_module5/case_study/src/App.css
+++ b/cs_module5/case_study/src/App.css
@@ -226,3 +226,33 @@ button:hover {
 .gender {
   width: 5%;
 }
+
+.pagination {
+  list-style: none;
+  display: flex;
+  justify-self: center;
+  align-items: center;
+  margin-bottom: 5rem;
+  font-size: 1.2rem;
+  gap: 5px;
+}
+.pagination .page-num {
+  padding: 8px 15px;
+  cursor: pointer;
+  border-radius: 3px;
+  font-weight: 400;
+  display: block;
+}
+
+.pagination .page-num:hover {
+  background-color: #5AB1BB;
+  color: white;
+}
+
+.pagination .active {
+  background-color: #5AB1BB;
+}
+
+.pagination .active .page-num {
+  color: #fff;
+}
