--- a/cs_module5/case_study/src/App.css
+++ b/cs_module5/case_study/src/App.css
@@ -275,7 +275,7 @@ button:hover {
   z-index: 20;
 }
 .icon-style{
-  background-color: #551B54;
+  background-color: #046056;
   border: 2px solid #fff;
   border-radius: 50%;
   height: 50px;
@@ -287,8 +287,8 @@ button:hover {
 .icon-style:hover{
   animation: none;
   background: #fff;
-  color: #551B54;
-  border: 2px solid #551B54;
+  color: #046056;
+  border: 2px solid #046056;
 }
 @keyframes movebtn {
   0%{
